syntax = "proto3";

package ampb;

import "ampb/anime_movie.proto";
import "nfpb/genre.proto";
import "nfpb/studio.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/ampb";

message CreateAnimeMovieInfoRequest {
  int64          animeID   = 1;
  repeated int32 genreIDs  = 2;
  repeated int32 studioIDs = 3;
}

message CreateAnimeMovieInfoResponse {
  AnimeMovieResponse animeMovie = 1;
  repeated nfpb.Genre genres    = 2;
  repeated nfpb.Studio studios  = 3;
}