syntax = "proto3";

package aspb;

import "aspb/anime_serie.proto";
import "nfpb/genre.proto";
import "nfpb/studio.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/aspb";

message AddAnimeSerieInfoRequest {
    int64 animeID = 1;
    nfpb.AnimeGenresRequest genres = 2;
    nfpb.AnimeStudiosRequest studios = 3;
}

message AddAnimeSerieInfoResponse {
    AnimeSerieResponse animeSerie = 1;
    nfpb.AnimeGenresResponse genres = 2;
    nfpb.AnimeStudiosResponse studios = 3;
}